--- a/workshop4task1.html
+++ b/workshop4task1.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workshop 4</title>
+    <link rel="stylesheet" href="week4.css">
     <h1 style="background-color: chocolate;color:white;">Web technology week 4 workshop task</h1>
     <h2 style="color:aqua;background-color:black;" style="font-size: x-small;">Web technology week 4 workshop task</h2>
     <h3 style="color:brown;font-size: x-large;background-color: darkgreen;">Web technology week 4 workshop task</h3>
@@ -13,6 +14,18 @@
 
 </head>
 <body>
-    
+    <img src="garena-free-fire-z4.jpg" alt="Ankit" width="1500" height="750">
+    <p>Garena Free Fire, also known as Free Fire, is a Battle Royale game developed and published by Garena for Android and iOS.
+     It became the most downloaded mobile game globally in 2019. As of 2021, Free Fire had surpassed 150 million daily active users</p>
+    <style>
+        p{
+            color: white;
+            background-color: blue;
+            font-size: x-large;
+            font-weight: 200;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+    </style>
+    <img id="Shisir" src="week4image.jpg" alt="Ankit">
 </body>
 </html>
