--- a/week5/site1.html
+++ b/week5/site1.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="week5.css">
+    <link rel="stylesheet" href="site1.css">
 </head>
 <body>
     <h1>Selling online is vital to business growth</h1>
@@ -20,5 +20,3 @@
     </div>
    
     
-</body>
-</html> 
